Fix dark mode

--- a/content_scripts/vimium.css
+++ b/content_scripts/vimium.css
@@ -513,3 +513,7 @@ iframe.vimiumNonClickable {
     color: white;
   }
 }
+
+.vimiumUIComponentVisible {
+  color-scheme: light;
+}
